--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+
     <meta
-      name="description"
+      name="Tinkherhack"
       content="Comming to you for the THIRD TIME"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -24,7 +26,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tink-Her-Hack 3.0</title>
+    <title>Tink-Her-Hack 3.0 | Kerala's Largest Hackathon for Women</title>
+<meta name="title" content="Tink-Her-Hack 3.0 | Kerala's Largest Hackathon for Women" />
+<meta name="description" content="Join Tink-Her-Hack 3.0, Kerala's largest overnight hackathon exclusively for women. No coding experience needed. Start your tech journey with mentors and build your first tech project alongside 4000 women across 50+ venues in Kerala." />
+
+ 
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://her.tinkerhub.org/" />
+<meta property="og:title" content="Tink-Her-Hack 3.0 | Kerala's Largest Hackathon for Women" />
+<meta property="og:description" content="An overnight hackathon where 4000 women across Kerala stay up all night to build their first tech projects. A safe space to start your tech journey with mentors guiding you." />
+
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://her.tinkerhub.org/" />
+<meta property="twitter:title" content="Tink-Her-Hack 3.0 | Kerala's Largest Hackathon for Women" />
+<meta property="twitter:description" content="An overnight hackathon where 4000 women across Kerala stay up all night to build their first tech projects. A safe space to start your tech journey with mentors guiding you." />
+
+<meta name="keywords" content="Tink-Her-Hack, Kerala Hackathon, Women in Tech, Learn Coding, Beginner Hackathon, Girls in Technology, Tech for Women, 50+ venues, Mentorship, First Tech Project, Overnight Event" />
+<meta name="author" content="Tink-Her-Hack Team" />
+<meta name="robots" content="index, follow" />
+<meta name="language" content="English" />
+<meta name="revisit-after" content="7 days" />
+<meta name="distribution" content="global" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
